<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.technogym.equipmenttest.tags.app.activities.MainActivity"
    android:background="@color/background_blue_color">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serialnumber_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/header_orange_label_color"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="24sp"
        android:fontFamily="sans-serif"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/txtViewSerialNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="24sp"
        android:fontFamily="sans-serif"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp" />

    <Button
        android:text="@string/nfc_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnScanNFC"
        android:background="@color/header_orange_label_color"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_below="@+id/txtViewSerialNumber"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/qrcode_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnScanQrCode"
        android:background="@color/header_orange_label_color"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_below="@+id/btnScanNFC"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true" />

</RelativeLayout>
